--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+textarea {
+  field-sizing: content;
+}
+
 .entry {
   animation: fadeIn 0.2s ease-in-out both;
 }
